tests/sumo/devices/rerouting/assignment/errors/disconnect_via_ignore/errors.sumo.meso
Warning: No connection between edge 'end' and edge 'middle' found.
Warning: No route for vehicle '0' found.
